# assignment

./: README.md
AI/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  runserver.sh
AI/.devcontainer/: Dockerfile.local  devcontainer.env.example  devcontainer.json  docker-compose.local.yml
AI/app/: main.py
AI/app/config/: settings.py
AI/app/core/: enums.py
AI/app/core/models/: review.py  user.py
AI/app/core/system_prompts/: expert_review.py
AI/app/infrastructure/: README_ABSTRACTION.md  dependencies.py
AI/app/infrastructure/api/: auth_routes.py  main_routes.py
AI/app/infrastructure/db/: main.py
AI/app/infrastructure/db/mongo/: README.md  database.py  (+2 more)
AI/app/infrastructure/factories/: README.md  __init__.py  repository_factory.py
AI/app/infrastructure/jobs/: tasks.py
AI/app/infrastructure/logger/: __init__.py  logger.py
AI/app/infrastructure/services/: authenticator_jwt.py  praison_agent.py
AI/app/infrastructure/stubs/: praisonaiagents.pyi
AI/app/infrastructure/utils/: hash.py
AI/app/interfaces/presenters/: README.md
AI/app/interfaces/providers/: README.md
AI/app/interfaces/repositories/: README.md  review_repository_interface.py  user_repository_interface.py
AI/app/interfaces/services/: README.md  agent_base_interface.py  authenticator_interface.py
AI/app/tests/: README.md  conftest.py  test_auth_logout.py  test_auth_registration.py  test_rate_limiting.py  test_simple.py
AI/app/use_cases/: agent_simple_chat_use_case.py  authenticate_use_case.py  review_use_case.py
AI/scripts/: reset-db.sh
(+64 files in other folders)
